# iska-net

./: .gitignore  HEB.md  MATH.md  README.md  environment.yml  pyproject.toml
assets/: human_learning_transformer_learning_review_dataset_expanded.tex  human_learning_transformer_learning_review_extended.tex  human_learning_transformer_learning_review_graph_to_graph.tex  main.tex
data/: README.md
planning/: ARCHITECTURE.md  BACKGROUND-RESEARCH.md  BIOMOLECULAR-ORACLE-DYNAMICS-PLAN.md  COORDINATE-HEAD-IMPLEMENTATION.md  DATASET-CAPACITY-AUDIT.md  DATASET-CATALOG-IMPLEMENTATION-PLAN.md  DATASET-CATALOG-SPLITS.md  DATASET-CATALOG-STATUS.md  DATASET-EXPANDED-PAPER-UPDATE-PLAN.md  DATASETS.md  FULL-PRETRAINING-DATASET.md  INFERENCE-MODALITY-MATRIX-DEV1.md  LICENSE-REVIEW.md  METRICS.md  MULTIMODAL-BIO-LM-DATASET-UTILIZATION-PLAN.md  NATURELM-UGM-NEXT-STEPS-IMPLEMENTATION-PLAN.md  OMG-GLM2-ESM-CONTACT-INTEGRATION.md  ORACLE-DYNAMICS-TRAINING-RUNBOOK.md  PHASE1-PAPER-FUNCTIONALITY-GAPS.md  PLAN-A.md  PLAN-B.md  PLAN-C.md  PLAN-D.md  PLAN-E.md  PLAN-F.md  PLAN-G.md  PLAN-H.md  REAL-DATA-TRAINING-STATUS.md  RUNBOOK-4090.md  STRUCTURE-DYNAMICS-TRAINING.md  TRAINING-SEQUENCE.md  TROPICAL-ATTENTION-INTEGRATION-PLAN.md  UGM-FULL-DATASET-DIFF-AUDIT.md  UGM-FULL-DATASET-IMPLEMENTATION-PLAN.md  UGM-READINESS-DIFF-AUDIT.md  UGM-READINESS-IMPLEMENTATION-PLAN.md  UGM-SYNTHETIC-FAUX-CODE-AUDIT.md
scripts/: acquire_datasets.py  acquire_model_files.py  acquire_naturelm_sources.py  audit_dataset_capacity.py  build_bio_phase_subsets.py  build_categorical_jacobian_contacts.py  curate_data.py  (+51 more)
(+194 files in other folders)
